# langchain-tutorial

./: L1-Model_prompt_parser_UPDATED.ipynb  L10-tagging-and-extraction-student.ipynb  L10_5_tagging_extraction_with_structured_output.ipynb  L11-tools-routing-apis-student.ipynb  L12-conversational-agents.ipynb  L2-Memory_UPDATED.ipynb  L3-Chains_UPDATED.ipynb  L4-QnA_UPDATED.ipynb  L5-Evaluation_UPDATED.ipynb  L5_5_rag_and_rag_eval_outdoor_catalog.ipynb  L6-Agents_UPDATED.ipynb  L7-openai_functions_student.ipynb  L8-lcel-student.ipynb  L9-function-calling-student.ipynb  L9_5_langchain_tool_calling_options.ipynb  README.md  environment.yaml  openai_llm_service_using_langchain_structured_output.py  pyproject.toml  requirements.locked.txt  requirements.txt
